--- a/locales/fr.json
+++ b/locales/fr.json
@@ -45,7 +45,7 @@
     "title": "Écosystème Aérospatial Complet",
     "subtitle": "Solutions de la Plateforme METRA",
     "description": "Sécurité, traçabilité et confiance réglementaire pour la gestion d'actifs aérospatiaux",
-    "keyFeatures": "Caractéristiques Clés :",
+    "keyFeatures": "Caractéristiques :",
     "metrafleet": {
       "title": "MetraFleet",
       "subtitle": "Gestion d'Actifs en Temps Réel",
