--- a/locales/en.json
+++ b/locales/en.json
@@ -202,8 +202,9 @@
     }
   },
   "impact": {
-    "title": "TRANSFORMING AVIATION OPERATIONS",
-    "subtitle": "Measurable impact across the aviation industry",
+    "title": "DRIVING REAL-WORLD IMPACT",
+    "subtitle": "Data integrity, operational agility, and compliance built into every layer.",
+    "description": "Backed by blockchain and AI, every tool in our suite is built to solve real challenges, faster processes, secure records, and proven reliability.",
     "stats": {
       "integrity": {
         "value": "99.9%",
