--- a/locales/fr.json
+++ b/locales/fr.json
@@ -197,6 +197,7 @@
   "impact": {
     "title": "TRANSFORMER LES OPÉRATIONS AÉRONAUTIQUES",
     "subtitle": "Impact mesurable dans toute l'industrie aéronautique",
+    "description": "Impact mesurable dans toute l'industrie aéronautique",
     "stats": {
       "integrity": {
         "value": "99,9%",
