Improve heritage section

--- a/locales/en.json
+++ b/locales/en.json
@@ -202,7 +202,7 @@
     }
   },
   "impact": {
-    "title": "DRIVING REAL-WORLD IMPACT",
+    "title": "Driving Real-World Impact",
     "subtitle": "Data integrity, operational agility, and compliance built into every layer.",
     "description": "Backed by blockchain and AI, every tool in our suite is built to solve real challenges, faster processes, secure records, and proven reliability.",
     "stats": {
