--- a/locales/en.json
+++ b/locales/en.json
@@ -149,8 +149,8 @@
     }
   },
   "technology": {
-    "title": "Cutting-Edge Technology Stack",
-    "subtitle": "Built on the most advanced and secure technologies available today",
+    "title": "The dual engine behind our innovation",
+    "subtitle": "AI for insight, Blockchain for trust - engineered for aerospace.",
     "metraBackbone": "ARTS INNOVATIONS BACKBONE",
     "metraDescription": "Sovereign blockchain designed to bring security, traceability, and regulatory trust to aerospace asset management",
     "labels": {
